# python-template

./: .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/rules/: 0-global-instructions.md  1-tech-stack-instructions.md  2-structure-instructions.md  3-python-patterns-instructions.md  4-code-quality-instructions.md  5-testing-patterns-instructions.md  6-documentation-patterns-instructions.md
ai/: example-prompts.md  plan.md  prd.md
ai/docs/: example-feature.md
src/: __init__.py  config.py  main.py  utils.py
tests/: conftest.py  test_config.py  test_utils.py
